--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,4 +22,11 @@
     <string name="product_short_description">Type sort description</string>
     <string name="product_full_description">Enter full description</string>
     <string name="add_product">Add Product</string>
+    <string name="register">SignUp</string>
+    <string name="name">Enter your name</string>
+    <string name="emailadress">Enter your email</string>
+    <string name="mobile">Enter 10 digit mobile number</string>
+    <string name="businessname">Enter your business name</string>
+    <string name="address">Enter your complete address</string>
+    <string name="seller_dasboard">Seller Dashboard</string>
 </resources>
