--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -35,4 +35,9 @@
     <string name="interotext">Join with usand sellyour own producs on Bnkura\'s largestmobile commerce plateform!</string>
     <string name="newseller">New Seller</string>
     <string name="registered_seller">Registered Seller</string>
+    <string name="new_order">New Order</string>
+    <string name="new_addproduct">Add Product</string>
+    <string name="new_viewedit">View/Edit Product</string>
+    <string name="new_comletedorder">Completed Order</string>
+    <string name="paymet">Payment</string>
 </resources>
