text justify & multiimage

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -46,4 +46,5 @@
     <string name="add_varient">Add Varient</string>
     <string name="enterpassword">Enter password</string>
     <string name="stock_unit">No. of stock quantity</string>
+    <string name="brand">Brand</string>
 </resources>
